# board-pta-adapter

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md  config.example.yml  config.template.yaml  config.template.yml  pyproject.toml  script_config.example.yml  script_gen.py  script_sync.py
fetcher/: __init__.py  fetcher.py
fetcher/app/: gen.py  sync.py
fetcher/utils/: __init__.py  utils.py
fetcher/worker/: __init__.py  workers.py
scripts/: avatar.py
src/adapter/: config.py  pta_client.py  utils.py
src/adapter/cli/: _shared.py  cdp.py  gplt.py  xcpcio.py
src/adapter/core/: gplt.py  xcpcio.py
src/adapter/models/: config.py  gplt.py  pta.py  xcpcio.py
src/common/models/pta/: __init__.py  base.py  common_rankings.py  problem_set.py  problem_types.py  submissions.py
src/common/pta/: client.py
src/common/utils/: excel.py  storage.py
templates/: template.xcpc.xlsx
utils/: utils.py
xlsx/: template.xcpc.xlsx  template.xlsx
