[project]
name = "fetcher"
version = "0.1.0"
description = "GPLT Competition Leaderboard Fetcher of ZZULI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.scripts]
gen = "fetcher.app.gen:main"
sync = "fetcher.app.sync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fetcher"]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
